# murmure

./: .gitignore  404.html  API_USAGE.md  BETA_TESTING.md  BETA_TESTING_EN.md  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_NOTES.md  README.md  eslint.config.js  index.html  install.sh  latest.json  mkdocs.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sitemap.xml  vite.smartmic.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build-fedora.yml  build-linux-ubuntu-24.yml  build-linux.yml  build-macos-intel.yml  build-macos.yml  build-windows-nsis.yml  build-windows.yml  ci.yaml  docs.yml  e2e-tests.yaml  e2e.yml  publish-winget.yml  release.yml  retrieve-macos-status.yml
COMPILE_GUIDES/: README.md
COMPILE_GUIDES/ubuntu_22.04/: Dockerfile  README.md  docker-compile.sh
COMPILE_GUIDES/ubuntu_24.04/: Dockerfile  README.md  docker-compile.sh
beta-testing/: index.html
configure-shortcuts-on-linux/: index.html
docs/: BETA_TESTING_EN.md  BETA_TESTING_FR.md  beta-testing.fr.md  beta-testing.md  configure-shortcuts-on-linux.fr.md  configure-shortcuts-on-linux.md  faq.fr.md  faq.md  index.fr.md  index.md
docs/features/: api.fr.md  api.md  cli.fr.md  cli.md  commands.fr.md  commands.md  dictionary.fr.md  dictionary.md  formatting-rules.fr.md  formatting-rules.md  llm-connect.fr.md  llm-connect.md  smart-speech-mic.fr.md  smart-speech-mic.md  transcription.fr.md  transcription.md  voice-mode.fr.md  voice-mode.md
docs/getting-started/: first-steps.fr.md  first-steps.md  linux.fr.md  linux.md  macos.fr.md  macos.md  windows.fr.md  windows.md
docs/stylesheets/: custom.css
docs/troubleshooting/: index.fr.md  index.md  llm-connect.fr.md  llm-connect.md  shortcuts.fr.md  shortcuts.md  text-insertion.fr.md  text-insertion.md  transcription.fr.md  transcription.md
faq/: index.html
features/api/: index.html
features/cli/: index.html
features/commands/: index.html
features/dictionary/: index.html
fr/: index.html
fr/beta-testing/: index.html
overrides/: main.html
scripts/: convert_medasr_local.py
search/: search_index.json
src/: router.tsx  tailwind.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  macos.json
src-tauri/resources/smartmic/: index.html  manifest.json  sw.js
src-tauri/src/: audio.rs  build_info.rs  clipboard.rs  commands.rs  http_api.rs  lib.rs  llm_connect.rs  main.rs  settings.rs  updater.rs
src-tauri/src/audio/: audio.rs  chunk_pipeline.rs  chunking.rs  clean_recording.rs  helpers.rs  live_text.rs  microphone.rs  mod.rs  pipeline.rs  recorder.rs  sound.rs  state.rs  streaming.rs  types.rs  vad.rs
src-tauri/src/cli/: cli.rs  helpers.rs  import.rs  mod.rs  types.rs
src-tauri/src/clipboard/: clipboard.rs  clipboard_wayland.rs  mod.rs
src-tauri/src/commands/: clipboard.rs  config_file.rs  dictionary.rs  formatting_rules.rs  llm.rs  mod.rs  overlay.rs  platform.rs  record_mode.rs  settings.rs  shortcuts.rs  smartmic.rs  test_harness.rs  tts.rs  wake_word.rs  wayland.rs
src-tauri/src/dictionary/: dictionary.rs  eval.rs  mod.rs  store.rs  types.rs
src-tauri/src/engine/: boost_tree.rs  engine.rs  helpers.rs  medasr.rs  mod.rs  transcription_engine.rs  types.rs
src-tauri/src/formatting_rules/: formatter.rs  helpers.rs  highlighter.rs  mod.rs  types.rs
src-tauri/src/http_api/: server.rs
src-tauri/src/llm/: helpers.rs  llm.rs  types.rs
src-tauri/src/model/: model.rs
src-tauri/src/onboarding/: mod.rs
src-tauri/src/overlay/: input_region.rs  layer_shell.rs  mod.rs  overlay.rs  tray.rs
src-tauri/src/settings/: dictionary.rs  mod.rs  settings.rs  types.rs
src-tauri/src/shortcuts/: actions.rs  capture.rs  cli_dispatch.rs  helpers.rs  lib_windows_linux.rs  linux.rs  macos.rs  mod.rs  platform_linux.rs  platform_linux_wayland.rs  platform_macos.rs  platform_rdev.rs  platform_windows.rs  rdev_common.rs  registry.rs  shortcuts.rs  types.rs  windows.rs
src-tauri/src/shortcuts/legacy/: mod.rs
src-tauri/src/shortcuts/platform_linux/: mod.rs  wayland.rs  x11.rs
src-tauri/src/smartmic/: audio_bridge.rs  cert.rs  input_bridge.rs  mod.rs  pairing.rs  qr.rs  server.rs  types.rs  websocket.rs
src-tauri/src/stats/: stats.rs  types.rs
src-tauri/src/utils/: enigo_session.rs  mod.rs  platform.rs  string.rs  wayland.rs  wayland_inject.rs
src-tauri/src/utils/wayland_xkb/: char_map.rs  layout_detect.rs  mod.rs  normalize.rs  subset.rs  types.rs  wayland_xkb.rs
src-tauri/src/wake_word/: types.rs  wake_word.rs
tests-e2e/: README.md  package-lock.json  package.json  tsconfig.json  wdio.conf.ts
troubleshooting/: index.html
(+380 files in other folders)
