[package]
name = "murmure"
version = "1.10.1"
description = "Privacy-first speech-to-text, running entirely on your machine"
authors = ["al1x-ai.com"]
license = "AGPL-3.0-or-later"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "murmure_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
hound = "3.5.1"
cpal = "0.17.3"
rodio = "0.22"
once_cell = "1"
reqwest = { version = "0.13", features = ["json", "stream"] }
futures-util = "0.3"
flate2 = "1.1"
tar = "0.4"
anyhow = "1.0"
ort = { version = "2.0.0-rc.10", features = ["download-binaries"] }
ndarray = "0.16.1"
regex = "1.12.2"
thiserror = "2.0.18"
tokenizers = { version = "0.23.1", default-features = false, features = ["fancy-regex"] }
log = "0.4.29"
enigo = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync", "net"] }
text2num = "2.6.2"
axum = { version = "0.8", features = ["multipart", "ws"] }
hyper = "1"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-dialog = "~2.6"
chrono = { version = "0.4", features = ["clock"] }
tauri-plugin-store = "2"
tauri-plugin-log = "2"
unicode-normalization = "0.1"
strsim = "0.11"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
url = "2"
qrcode = "0.14"
rcgen = "0.13"
time = "0.3"
rustls = { version = "0.23", features = ["ring"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
socket2 = "0.6"
local-ip-address = "0.6"
base64 = "0.22"
hostname = "0.4"
rubato = "3.0.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
parking_lot = "0.12"

# rdev (fufesou fork): keyboard capture on Linux X11, F13-F20 key support.
[target.'cfg(target_os = "linux")'.dependencies]
rdev = { git = "https://github.com/fufesou/rdev" }
# Direct `/dev/uinput` virtual keyboard for Wayland keystroke injection.
# Wayland forbids inter-client input injection by design; uinput
# bypasses it at the kernel level and works on every compositor (KWin,
# Mutter, wlroots). See `src/utils/wayland_inject.rs` for the rationale.
input-linux = "0.7"
# libloading: runtime dlopen of libgtk-layer-shell.so.0 so the binary
# does not carry a hard DT_NEEDED. Lets the .deb install on systems
# without libgtk-layer-shell0 (Ubuntu/GNOME) and falls back to the
# native Tauri overlay positioning.
libloading = "0.8"
# gtk + glib: needed to convert tauri::WebviewWindow::gtk_window() into
# a raw *mut GtkWindow pointer passed to the dlopen'd symbols. These
# crates are already transitively present via tauri.
gtk = "0.18"
glib = "0.18"
# Rust binding to libxkbcommon, used to compile a keymap for the active
# layout and build a char -> (evdev_keycode, needs_shift) table for the
# Direct paste mode. libxkbcommon is ubiquitous on Wayland systems so
# no extra packaging dependency is required.
xkbcommon = "0.9"

# Core Foundation for macOS keyboard layout handling (AZERTY/QWERTY conversion)
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-foundation-sys = "0.8"
# objc2: subclass the overlay content NSView to override hitTest: for the
# per-pixel input region (clicks pass through outside the opaque widgets).
# Pinned to 0.6 to match the version Tauri already pulls; a second objc2 in
# the graph makes msg_send!/add_method resolve the wrong Encode trait.
objc2 = "0.6"
# NSPoint/NSRect/NSSize (Encode-implementing AppKit geometry) for hitTest:,
# instead of hand-rolled structs that would not implement Encode.
objc2-foundation = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Console",
] }

# panic = "abort" deliberately omitted, changes thread-panic behaviour.
[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
